--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,3 +15,10 @@
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+
+/* @media (max-width: 1000px){
+  .header{
+      font-size: 1rem;
+      padding: 1rem 1rem;
+  }
+} */
