--- a/styles/QrCode.module.css
+++ b/styles/QrCode.module.css
@@ -5,10 +5,10 @@
     align-items: center;
     justify-content: center;
 
-    gap: 2rem;
+    gap: 1rem;
 
-    width: 40%;
-    margin: 2rem auto;
+    width: 50%;
+    margin: 1rem auto;
     padding: 2rem;
 
     border-radius: 10px;
@@ -83,10 +83,11 @@
 }
 
 .copyBtn {
-    width: 80%;
-    height: 80%;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     color: gray;
+    margin: auto;
 }
 
 .copyBtn:hover {
@@ -105,7 +106,7 @@
     display: grid;
     place-items: center;
 
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: bold;
     cursor: pointer;
 }
@@ -115,17 +116,65 @@
     transition: 0.2s ease-in;
 }
 
-
-.qrContainer::before {
-    content: '';
+.blur {
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
     
-    height: 90vh;
-    width: 90vw;
+    
+    height: 100vh;
+    width: 100%;
     backdrop-filter: blur(5px);
+}
 
-    z-index: -1;
+
+
+@media (max-width: 850px){
+
+    .qrContainer {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    
+        gap: 1rem;
+    
+        width: 85%;
+        margin: 1rem auto;
+        padding: 1rem;
+    
+        border-radius: 10px;
+    
+        box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+    
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    
+        z-index: 1000000 ;
+    }
+
+    .copyLink {
+        width: 80%;
+    }
+
+    .copyLink input{
+        width: 100%;
+        font-size: 1rem;
+    }
+
+    .copyBtn {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        color: gray;
+    }
+
+    /* .blur {
+        
+    } */
+    
 }
