--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@
   color: var(--white);
 }  */
 
+html{
+  background: var(--darkblue) !important;
+}
+
 body{
   background: var(--darkblue);
   color: white;
